# Ohtuminiprojekti

./: .coveragerc  .gitignore  .pylintrc  README.md  cite_types.toml  pyproject.toml  report.html  run_robot_tests.sh  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  raportti.md
src/: .dockerignore  .env  AppLibrary.py  app.py  cite_types.toml  config.py  fly.toml  pyproject.toml  requirements.txt  routes.py
src/repositories/: book_repository.py  citation_repository.py  configuration_repository.py
src/services/: bibtex_service.py  book_citation_service.py  citation_service.py
src/static/: main.css
src/templates/: bibtex.html  citations.html  form.html  index.html  layout.html
src/tests/: book_repo_test.py
src/tests/repositories/: book_repo_test.py  citation_repo_test.py  config_repo_test.py
src/tests/repositories/toml/: test.toml
src/tests/robot/: create_book.robot  create_citation.robot  delete_citation.robot  home.robot  resource.robot
src/tests/services/: bibtex_service_test.py  book_service_test.py  citation_service_test.py
