[tool.poetry]
name = "ohtuminiprojekti"
version = "0.1.0"
description = ""
authors = ["Johannes Elonheimo <johannes.elonheimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
