[tool.poetry]
name = "ohtuminiprojekti"
version = "0.1.0"
description = ""
authors = ["Johannes Elonheimo <johannes.elonheimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
invoke = "^1.7.3"
coverage = "^6.5.0"
robotframework = "^6.0.1"
robotframework-seleniumlibrary = "^6.0.0"
requests = "^2.28.1"
toml = "^0.10.2"
autopep8 = "^2.0.0"
python-dotenv = "^0.21.0"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
